@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-11T00:45:39Z",
-  "count_outdated" : 279,
-  "uniques_outdated" : 245,
+  "timestamp" : "2025-11-12T00:45:45Z",
+  "count_outdated" : 280,
+  "uniques_outdated" : 246,
   "count" : 283,
   "uniques" : 249,
   "clones" : [
-    {
-      "timestamp": "2025-10-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-10-31T00:00:00Z",
       "count": 2,
